--- a/aspiration.html
+++ b/aspiration.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="About_me.html">About Me</a>
+        <a href="index.html">About Me</a>
         <a href="Knowledge.html">Knowledge</a>
         <a href="Volunteering.html">Volunteering</a>
         <a href="Work_exp.html">Work Experience</a>
